Updated project structure, small touch-ups, and edits. Updated images and URLs.

--- a/cover_page.tex
+++ b/cover_page.tex
@@ -4,7 +4,7 @@
 
     % Purple Rectangular Page Outline --------------------------------------------------------
     \begin{tikzpicture}[remember picture,overlay]
-        \draw[line width=10 pt, color=SCSPurple]
+        \draw[line width=2 pt, color=SCSPurple]
             ($(current page.north west) + (0.30in,-0.30in)$) rectangle
             ($(current page.south east) + (-0.30in,0.30in)$);
     \end{tikzpicture}
@@ -12,8 +12,8 @@
 
     \begin{center}
         \vspace{1in}
-        % SwiftControl Systems Inc. Logo
-        \includegraphics[width=4in]{img/scsystemslogofull.jpg}
+        % SwiftControl Systems LLC Logo
+        \includegraphics[width=4in]{assets/swiftcontrol_systems_logo.jpg}
         \\
         \vspace{2in}
         % Title of Document
@@ -25,6 +25,6 @@
         \\
         \vspace{2in}
         % Name and Company Role
-        \large{\textbf{John Doe}\\Chief Financial Officer,\\SwiftControl Systems Inc.}
+        \large{\textbf{John Doe}\\Chief Financial Officer,\\SwiftControl Systems LLC}
     \end{center}
 \end{titlepage}
